--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.0",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
+    "framer-motion": "^12.4.2",
+    "lucide-react": "^0.475.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "swiper": "^11.2.3"
   },
   "devDependencies": {
     "@types/node": "^20",
